[gd_scene load_steps=7 format=3 uid="uid://dhhbfo5uhnhqq"]

[ext_resource type="Script" path="res://src/Props/ElectricSocket/electric_socket.gd" id="1_ntnju"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ro1ej"]
emission_enabled = true
emission = Color(0.729412, 0.729412, 0.729412, 1)
emission_energy_multiplier = 0.1

[sub_resource type="BoxMesh" id="BoxMesh_8u0x0"]
material = SubResource("StandardMaterial3D_ro1ej")
size = Vector3(0.4, 0.2, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7hpo4"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_5firy"]
material = SubResource("StandardMaterial3D_7hpo4")
size = Vector3(0.025, 0.05, 0.01)

[sub_resource type="BoxShape3D" id="BoxShape3D_k7vrp"]
size = Vector3(0.5, 0.3, 0.05)

[node name="ElectricSocket" type="StaticBody3D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_ntnju")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_8u0x0")

[node name="Hole" type="Node3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00367472, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D/Hole"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0927923, -0.0435232, 0.0206697)
mesh = SubResource("BoxMesh_5firy")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D/Hole"]
transform = Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, -0.136306, 0.034958, 0.0206697)
mesh = SubResource("BoxMesh_5firy")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="MeshInstance3D/Hole"]
transform = Transform3D(0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, -0.051, 0.035, 0.021)
mesh = SubResource("BoxMesh_5firy")
skeleton = NodePath("../..")

[node name="Hole2" type="Node3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.194886, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D/Hole2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0927923, -0.0435232, 0.0206697)
mesh = SubResource("BoxMesh_5firy")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D/Hole2"]
transform = Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, -0.136306, 0.034958, 0.0206697)
mesh = SubResource("BoxMesh_5firy")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="MeshInstance3D/Hole2"]
transform = Transform3D(0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, -0.051, 0.035, 0.021)
mesh = SubResource("BoxMesh_5firy")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_k7vrp")

[node name="ChargePhoneTimer" type="Timer" parent="."]

[node name="PhoneHolder" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.112656, 0.109872, 0.0601849)

[connection signal="timeout" from="ChargePhoneTimer" to="." method="_on_charge_phone_timer_timeout"]
